@@ -80,12 +80,16 @@ public final class EnergyUtil {
   }
 
   public static final void balance_batteries(final ArrayList<EnergyNode> batteries){
+    balance_batteries(batteries, 0);
+  }
+  
+  public static final void balance_batteries(final ArrayList<EnergyNode> batteries, final long removed_battery_energy){
 
     int i;
     final int length = batteries.size();
     Energy energy_storage;
 
-    long total_energy = 0;
+    long total_energy = removed_battery_energy;
     long total_capacity = 0;
     final long[] capacity = new long[length];
 
@@ -104,7 +108,7 @@ public final class EnergyUtil {
     
     for(i = 0; i < length; i++){
       energy_storage = batteries.get(i).energy;
-      energy_storage.set_new_energy_level((double)energy_to_insert[i] / DecimalNumber.DECIMAL_ACCURACY);
+      energy_storage.setEnergy((double)energy_to_insert[i] / DecimalNumber.DECIMAL_ACCURACY);
     }
   }
 
